After going fullscreen on anything (Youtube, Netflix, Disney+ etc.), you can't exit fullscreen mode. Firefox 112, Mac
Categories
(Core :: Widget: Cocoa, defect, P2)
Tracking
()
People
(Reporter: meliodas819, Assigned: bradwerth)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-release+
|
Details | Review |
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:109.0) Gecko/20100101 Firefox/112.0
Steps to reproduce:
Open firefox.
Enter fullscreen (not f11)
Go to youtube or other streaming platforms such as netflix or disney+
Enter fullscreen on those videos
Actual results:
The video does go fullscreen, but it will not let you leave fullscreen mode. If you manage to leave fullscreen mode, you can no longer watch any video in full screen unless you restart the window.
Expected results:
The video should have left fullscreen mode. I can currently leave fullscreen mode by right-clicking, then reloading the page. This leaves fullscreen mode but does not allow you to re enter it, even if you are watching a different video.
Comment 1•3 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::DOM: Core & HTML' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Comment 2•3 years ago
|
||
Reports of this are coming in to Mozilla Support (SUMO) as well, all from Mac users. For example:
- https://support.mozilla.org/questions/1411250 (unsolved)
- https://support.mozilla.org/questions/1411473 (new)
Presumably this is due to a change in Firefox 112 that only has an adverse effect on Mac OS.
Comment 3•3 years ago
|
||
The symptoms are reminiscent of a bug reported against Nightly Fx113 that was closed when the user who reported it stopped being able to reproduce it: bug 1824776.
I have the same issue since I updated to Firefox 112.0.1 today.
MacOS Ventura, MacBook Pro with M1 Pro
I just tested it and the bug is present in 113.0b6
Then I tested on Nightly and it DOES work fine on 114.0a1
I hope this helps get it resolved in a timely manner.
Just a quick update - I got the Fullscreen Plus addon and entering fullscreen using the addon works as intended and you can exit fullscreen without issues, providing an effective workaround for the time being.
Comment 6•3 years ago
|
||
(In reply to jscher2000 from comment #2)
Reports of this are coming in to Mozilla Support (SUMO) as well, all from Mac users. For example:
- https://support.mozilla.org/questions/1411250 (unsolved)
- https://support.mozilla.org/questions/1411473 (new)
Presumably this is due to a change in Firefox 112 that only has an adverse effect on Mac OS.
Edgar or Brad, you may like to take a look at this.
Comment 7•3 years ago
|
||
While pressing ESC key or calling document.exitFullscreen to exit fullscreen, DOM asks widget to exit fullscreen and wait for it to get exiting first. It looks like widget somehow is stuck in fullscreen state? Additionally, https://bugzilla.mozilla.org/show_bug.cgi?id=1824776#c0 also mention there is some weirdness on entering native fullscreen mode (via the green traffic light button). But that doesn't explain why Fullscreen Plus addon works fine.
dimitar, do you also see some weirdness on entering macOS native fullscreen state, e.g. via the green traffic light button?
Updated•3 years ago
|
| Assignee | ||
Comment 8•3 years ago
|
||
I'm not able to reproduce this yet. I want to make sure I understand the Steps to Reproduce.
- Launch Firefox.
- Click the green traffic light button to go to fullscreen.
- Navigate to youtube, to some video, and start playing it.
- Click the "fullscreen" button in the video player (or press 'f' key).
- Try to exit fullscreen (by pressing ESC or 'f' key).
Those steps work fine for me with Firefox Release 112, with Nightly, and with all the builds I'm trying on mozregression. If anybody has different Steps to Reproduce, please post them.
Brad, yes those are the steps to reproduce
Edgar,
Now that you mention it I do see weirdness with native macOS fullscreen - when entering fullscreen everything is fine, but on exiting fullscreen a blank bar appears on top of the topmost part of the window, i.e. above the tabs and the traffic light buttons. In essence the window extends above the tabs and traffic light buttons. Also I cannot drag the window if I click on this top blank bar, I have to click bellow the bar (in line with the tabs and the traffic light buttons). Going to fullscreen and back does not solve it, but resizing the window so it is smaller than fullscreen, and then entering and exiting fullscreen removes the blank bar.
Here's an image to illustrate what I'm talking about
https://imgur.com/a/o3Kp5oj
I am using 2 external monitors in addition to my MacBook's screen, for a total of 3 monitors, idk if this matters, I will test it later.
Updated•3 years ago
|
Comment 10•3 years ago
|
||
(In reply to dimitar from comment #9)
but on exiting fullscreen a blank bar appears on top of the topmost part of the window, i.e. above the tabs and the traffic light buttons. In essence the window extends above the tabs and traffic light buttons.
In addition to blank bar, is the menu bar shown back on the top of screen after exiting fullscreen?
I am using 2 external monitors in addition to my MacBook's screen, for a total of 3 monitors, idk if this matters, I will test it later.
I tried to reproduce with using 2 external monitors, but no luck.
Comment 11•3 years ago
|
||
(In reply to Edgar Chen [:edgar] from comment #10)
(In reply to dimitar from comment #9)
but on exiting fullscreen a blank bar appears on top of the topmost part of the window, i.e. above the tabs and the traffic light buttons. In essence the window extends above the tabs and traffic light buttons.
In addition to blank bar, is the menu bar shown back on the top of screen after exiting fullscreen?
Do you mean the macOS menu bar ? I have that set to autohide, it could be related to the issue.
(System Settings -> Desktop & Dock -> Menu Bar -> Automatically hide the menu bar : Always)
Comment 12•3 years ago
|
||
Okay I think I have a valuable clue - I changed the setting of Automatically hide the menu bar to Fullscreen Only and this solves the problem. Going back to Always it seemed like it was fixed but then it started happening again. Also, I noticed that when the bug happens I can not exit or enter fullscreen with the shortcut (Shift + Cmd + F), but when I do the window resize trick the shortcut starts working again. Also, when trying to use the shortcut and it's not working firefox starts behaving weird and takes a few seconds to switch content when clicking on different tabs. Changing the window size (in windowed mode) makes it load instantly, but clicking a different tab is slow again, going from windowed to fullscreen or vice versa (via the traffic light button) fixes it. Definitely some weird stuff is happening.
Comment 13•3 years ago
•
|
||
Thanks for these information! Now I could reproduce the issue after I set "Automatically hide the menu bar" to always. And issue occurs only when the window is maximum.
STR:
- Set macOS menu bar to autohide always. (System Settings -> Desktop & Dock -> Menu Bar -> Automatically hide the menu bar : Always)
- Maximize the window by double clicking on the tab bar.
- Enter native fullscreen by clicking green traffic light button.
- Exit native fullscreen by clicking green traffic light button.
And I got following regression window
21:54.36 INFO: Last good revision: 1b0e833d1922bcbf3160f15e05c3a2a548339efb
21:54.36 INFO: First bad revision: 168ec9dca708f3302ecb3c912e591197daf0c878
21:54.36 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=1b0e833d1922bcbf3160f15e05c3a2a548339efb&tochange=168ec9dca708f3302ecb3c912e591197daf0c878
Updated•3 years ago
|
Updated•3 years ago
|
Updated•3 years ago
|
Updated•3 years ago
|
Comment 16•3 years ago
|
||
Hi!
I'm having the same problem with full screen mode. Firefox 112.0.2
MacBook (intel) OS 13.3.1
It all started with version 112.
There is also a problem with Bookmarks Toolbar. It just doesn't show up and doesn't respond to the settings. Importantly, the browser has to be in full screen mode.
However, if you open a new full screen browser window, the Bookmarks Toolbar appears, but only in a new window.
Found the same case with Bookmarks Toolbar in several other people https://www.reddit.com/r/firefox/comments/12le1f8/cant_see_bookmarks_even_though_it_says_theyre/
| Assignee | ||
Comment 17•3 years ago
|
||
This is apparently regressed by Bug 1631735, which means I'm responsible for the fix. Unfortunately, I still can't reproduce the issue, not even with the settings noted in comment 12. I'll hook up to an external monitor and see if that changes things. I'll also check other reproduction notes from the duplicate Bugs.
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Comment 18•3 years ago
|
||
I can reproduce a form of this issue with an external monitor connected with these Steps to Reproduce:
- System Settings, set animate menubar to "Always".
- Launch Firefox, move the window to the external/secondary monitor.
- Double-click window titlebar to make it zoom to fill the screen.
- Click the green traffic light to go to fullscreen.
- Animate the menubar by moving the cursor over the menubar area such that the traffic lights appear.
- Click the green traffic light to exit fullscreen.
Expected results: a normal-looking zoomed window.
Actual results: a window with a too-tall title bar. I assume this is what is being described in comment 9.
Anyway, I can consistently reproduce and the regression is due to Bug 1631735. I'll build a fix and hope that this solves the "can't exit fullscreen" issue, too.
| Assignee | ||
Comment 19•3 years ago
|
||
Looks like we missed a case where fullscreen-from-zoom fails to update the fullscreen state, because the window technically never resizes when going from zoom to fullscreen. Patch inbound.
| Assignee | ||
Comment 20•3 years ago
|
||
And the reason why this happens on external screens is that secondary screens do not have the menubar nor the dock, and so the zoomed size is the full screen size, which doesn't change when the window goes to fullscreen.
| Assignee | ||
Comment 21•3 years ago
|
||
On secondary screens, the zoomed window can be made to be the same size as
the fullscreen size. Since our fullscreen state was only updated when the
window resized, the fullscreen state was never updated when going from
zoom to fullscreen if the window is on a secondary screen with no menubar
or dock. This patch ensures that we check again for a change in the
fullscreen state when the window actually enters or exits fullscreen. We
still check on resize, but now we will check again.
| Assignee | ||
Comment 22•3 years ago
|
||
I'm not absolutely sure this patch will solve the reported issue, so marking leave-open until the reporter can test it.
Comment 23•3 years ago
|
||
Comment 24•3 years ago
|
||
| bugherder | ||
Updated•3 years ago
|
Comment 25•3 years ago
|
||
Set release status flags based on info from the regressing bug 1631735
Comment 26•3 years ago
|
||
Too late to fix this for 113.0, but let's keep it on the radar as a possible dot release ride-along.
| Assignee | ||
Comment 27•3 years ago
|
||
Nightly now has the proposed fix. Would you please re-test with an updated Nightly (2023-05-03 build or later) and report if it fixes the problem?
Comment 29•3 years ago
|
||
Tested on Nightly build 114.0a1 (2023-05-03) (64-bit) and did not find these bugs
| Assignee | ||
Comment 33•3 years ago
|
||
Comment on attachment 9331039 [details]
Bug 1829403: Ensure that nsCocoaWindow fullscreen state is updated when going from zoom to fullscreen.
Beta/Release Uplift Approval Request
- User impact if declined: macOS users with external monitors and certain menubar settings will have bad fullscreen behavior when transitioning from a maximized window.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This is a spot fix to code that's been in-tree for many weeks to fix an edge case that was surprisingly prevalent for our users.
- String changes made/needed:
- Is Android affected?: No
Comment 34•3 years ago
|
||
The following field has been copied from a duplicate bug:
| Field | Value | Source |
|---|---|---|
| Regressed by | bug 1823284 | bug 1830585 |
For more information, please visit BugBot documentation.
| Assignee | ||
Comment 35•3 years ago
|
||
With the amount of duplicates resolved by this fix, I'm going to presume this solves the reporter's issue as well. Re-open if needed.
Updated•3 years ago
|
Comment 36•3 years ago
|
||
Comment on attachment 9331039 [details]
Bug 1829403: Ensure that nsCocoaWindow fullscreen state is updated when going from zoom to fullscreen.
High-impact macOS bug seeing a number of duplicate reports. Approved for 113.0 RC2!
Comment 37•3 years ago
|
||
| bugherder uplift | ||
Updated•3 years ago
|
Comment 38•3 years ago
|
||
I have reproduced this issue on macOS 10.15 connected to an external monitor, and by following the STR from comment 18. Tested on an affected Firefox build, 112.0.
The issue is verified as fixed on latest Nightly 114.0a1 and RC2 113.0 with macOS 10.15.
Description
•