Bug 1829403: Ensure that nsCocoaWindow fullscreen state is updated when going from zoom to fullscreen. r=mac-reviewers,mstange

On secondary screens, the zoomed window can be made to be the same size as
the fullscreen size. Since our fullscreen state was only updated when the
window resized, the fullscreen state was never updated when going from
zoom to fullscreen if the window is on a secondary screen with no menubar
or dock. This patch ensures that we check *again* for a change in the
fullscreen state when the window actually enters or exits fullscreen. We
still check on resize, but now we will check again.

Differential Revision: https://phabricator.services.mozilla.com/D176850